MSP-1756 update swagger
